// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BigramCircle test BigramCircle linePoint 0 snapshot 1`] = `
<div
  className="circle-circlePosition"
>
  <div
    className="internalDiv d-flex"
  >
    <div
      className="firstDiv emphasizedZero"
    >
      <img
        alt="conception"
        className="ml-2 mt-2"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 1,
          }
        }
      />
    </div>
    <div
      className="secondDiv"
    >
      <img
        alt="seeding"
        className="mr-2 mt-2"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
  </div>
  <div
    className="internalDiv d-flex"
  >
    <div
      className="thirdDiv"
    >
      <img
        alt="maturation"
        className="ml-2 mb-2"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
    <div
      className="fourthDiv"
    >
      <img
        alt="growth"
        className="mr-2 mb-2"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`BigramCircle test BigramCircle linePoint 1 snapshot 1`] = `
<div
  className="circle-circlePosition"
>
  <div
    className="internalDiv d-flex"
  >
    <div
      className="firstDiv"
    >
      <img
        alt="conception"
        className="ml-2 mt-2"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
    <div
      className="secondDiv"
    >
      <img
        alt="seeding"
        className="mr-2 mt-2"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
  </div>
  <div
    className="internalDiv d-flex"
  >
    <div
      className="thirdDiv"
    >
      <img
        alt="maturation"
        className="ml-2 mb-2"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
    <div
      className="fourthDiv emphasizedOne"
    >
      <img
        alt="growth"
        className="mr-2 mb-2"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 1,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`BigramCircle test BigramCircle linePoint 2 snapshot 1`] = `
<div
  className="circle-circlePosition"
>
  <div
    className="internalDiv d-flex"
  >
    <div
      className="firstDiv cancelBottomBorder"
    >
      <img
        alt="conception"
        className="ml-2 mt-2"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
    <div
      className="secondDiv"
    >
      <img
        alt="seeding"
        className="mr-2 mt-2"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
  </div>
  <div
    className="internalDiv d-flex"
  >
    <div
      className="thirdDiv emphasizedTwo"
    >
      <img
        alt="maturation"
        className="ml-2 mb-2"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 1,
          }
        }
      />
    </div>
    <div
      className="fourthDiv cancelLeftBorder"
    >
      <img
        alt="growth"
        className="mr-2 mb-2"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`BigramCircle test BigramCircle linePoint 3 snapshot 1`] = `
<div
  className="circle-circlePosition"
>
  <div
    className="internalDiv d-flex"
  >
    <div
      className="firstDiv cancelRightBorder"
    >
      <img
        alt="conception"
        className="ml-2 mt-2"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
    <div
      className="secondDiv emphasizedThree"
    >
      <img
        alt="seeding"
        className="mr-2 mt-2"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 1,
          }
        }
      />
    </div>
  </div>
  <div
    className="internalDiv d-flex"
  >
    <div
      className="thirdDiv"
    >
      <img
        alt="maturation"
        className="ml-2 mb-2"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
    <div
      className="fourthDiv cancelTopBorder"
    >
      <img
        alt="growth"
        className="mr-2 mb-2"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "opacity": 0.4,
          }
        }
      />
    </div>
  </div>
</div>
`;
